setup stats download
